# fwa-research-agent

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
.github/workflows/: agentbeats.yml  ci.yml
scenarios/fwa/: scenario.toml
src/fwa_agent/: __init__.py  client.py  config.py  experiment.py  retrieval.py  server.py  task_processor.py  video_processor.py
tests/: test_retrieval.py  test_task_processor.py
